src/index.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playfair+Display:wght@400;500&family=Poppins:ital,wght@0,200;0,400;0,500;0,700;1,100;1,300&display=swap');

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  list-style: none;
  text-decoration: none;
  width: 100%;
  overflow-x: hidden;
}
.logo{
  font-family: Bebas Neus;
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}
ul li{
  padding-left: 8px;
  padding-right: 8px;
  list-style: none;
  
}
a{
  text-decoration: none;
}
.nav-bar{
  height: 80px;
  background-color: rgb(14, 14, 14);
  position: sticky;
  top: 0;
  z-index: 10;
}
.head{
  z-index: -1;
  width: 100%;
  height: 650px;
  overflow-x: hidden;
}

.pro-img ,.s-pro-img{
width:261px;
height:311px;
border-radius: 45% 55% 22% 78% / 28% 13% 87% 72% ;
background-color: white;

animation: animate 3s ease-in-out  infinite ;
}
@keyframes animate {
  0%{
    box-shadow: 2px 2px 7px rgb(228, 83, 4);
  }
  33.33%{
    box-shadow: 2px 2px 10px rgb(244, 241, 239);
  }
  66%{
    
    box-shadow: 2px 2px 12px rgb(0, 255, 4);
  }

}
.ic{
  color: white;
}
.ic:hover{
   color: rgba(227, 251, 7, 0.954);
}
.about{
  background-image: linear-gradient(to right, #141e30, #243b55);
}
.edu{
  background-image: linear-gradient(to right, #141e30, #243b55);
}
.edu .img img{
  width: 134px;
  height: 150px;
}
/* @media screen and (max-width: 859px) and (min-width:770px) {

  .style-border{
    border: 7px solid white;
  }
  .pro-img{
    width: 200px;
    height: 311px;
  }
} */
@media screen and (max-width: 796px)  {
  .navlink ul{
    display: block;
  }
}
.card{
  box-shadow: 3px 3px 5px rgb(57, 238, 84);
}
.card:hover{
  box-shadow: 3px 3px 5px rgb(225, 45, 5);
}
.project{
  background :linear-gradient(to right, #0f0c29, #302b63, #24243e);
}
.contact{
  height: auto;
  background-image: linear-gradient(to right, #434343 0%, black 100%);
}
.s-pro-img{
  width: 200px;
  height: 200px;
  border-radius: 50%;
}
/* .about{
  position: relative;
}
.about::before{
   content: '';
   width: 100%;
   height: 200px;
   background-color: beige;
   position: absolute;
   top: 0;
   left: 0;

} */
.bubble{
  z-index:11;
  width: 100%;
  height: 50px;
  position: relative;
}
.bubble::before {
  content: '';
  width: 100%;
  height:100%;
  border-top-left-radius: 50% 100%;
  border-top-right-radius: 50% 100%;
  position: absolute;
  bottom:0;
  z-index: 11;
  width: 100%;
  background-image: linear-gradient(to right, #141e30, #243b55);
  height: 85%;
}


.achievement{
  background: linear-gradient(35%,green,pink);
}
#main{
  position: absolute;
  z-index: -4;
  /* overflow: hidden; */
}
.body{
  width: 100vw;
  height: 100%;
  overflow-x: hidden;
}

#root{
  width: 100%;
  overflow-x: hidden;
}

